UI: fix issue where card would go behind the zone dropdown

--- a/src/css/component/decktracker/overlay/deck-card.component.scss
+++ b/src/css/component/decktracker/overlay/deck-card.component.scss
@@ -16,6 +16,7 @@
 
 	&:hover {
 		transform: scale(1.1);
+		z-index: 9;
 		// animation: card-zoom 0.2s ease-in-out;
 	}
 
